--- a/src/box_detection/CMakeLists.txt
+++ b/src/box_detection/CMakeLists.txt
@@ -24,7 +24,15 @@ find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(OpenCV REQUIRED)
-find_package(PCL REQUIRED)
+find_package(PCL REQUIRED COMPONENTS
+  common
+  filters
+  segmentation
+  features
+  kdtree
+  sample_consensus
+  geometry
+)
 find_package(pcl_conversions REQUIRED)
 
 
