--- a/.github/workflows/ros2-ci-cd.yml
+++ b/.github/workflows/ros2-ci-cd.yml
@@ -48,12 +48,12 @@ jobs:
 
       - name: Build
         run: |
-          source /opt/ros/humble/setup.bash
+          . /opt/ros/humble/setup.bash
           colcon build --packages-select box_detection
         
       - name: Test
         run: |
-          source /opt/ros/humble/setup.bash
-          source install/setup.bash
+          . /opt/ros/humble/setup.bash
+          . install/setup.bash
           colcon test --packages-select box_detection
           colcon test-result --verbose
