--- a/.github/workflows/ros2-ci-cd.yml
+++ b/.github/workflows/ros2-ci-cd.yml
@@ -47,13 +47,15 @@ jobs:
           rosdep install --from-paths src --ignore-src -r -y
 
       - name: Build
+        shell: bash
         run: |
-          . /opt/ros/humble/setup.bash
+          source /opt/ros/humble/setup.bash
           colcon build --packages-select box_detection
         
       - name: Test
+        shell: bash
         run: |
-          . /opt/ros/humble/setup.bash
-          . install/setup.bash
+          source /opt/ros/humble/setup.bash
+          source install/setup.bash
           colcon test --packages-select box_detection
           colcon test-result --verbose
