--- a/.github/workflows/ros2-ci-cd.yml
+++ b/.github/workflows/ros2-ci-cd.yml
@@ -13,13 +13,13 @@ jobs:
   build-and-test:
     runs-on: ubuntu-22.04
     container:
-      image: osrf/ros:humble-desktop
+      image: osrf/ros:humble-desktop-full
     
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          path: src/smart_palletizing
+          path: src/control_ws
 
       - name: Install dependencies
         run: |
@@ -27,10 +27,19 @@ jobs:
           apt-get install -y \
             python3-colcon-common-extensions \
             python3-rosdep \
+            ros-humble-moveit \
+            ros-humble-moveit-ros-planning-interface \
+            ros-humble-moveit-core \
+            ros-humble-moveit-ros-planning \
+            ros-humble-moveit-common \
+            ros-humble-moveit-configs-utils \
+            ros-humble-moveit-simple-controller-manager \
             ros-humble-cv-bridge \
             ros-humble-image-transport \
             ros-humble-geometry-msgs \
             ros-humble-sensor-msgs \
+            ros-humble-std-msgs \
+            ros-humble-trajectory-msgs \
             ros-humble-visualization-msgs \
             ros-humble-tf2 \
             ros-humble-tf2-ros \
@@ -38,7 +47,8 @@ jobs:
             ros-humble-pcl-conversions \
             ros-humble-pcl-msgs \
             libopencv-dev \
-            libpcl-dev
+            libpcl-dev \
+            libeigen3-dev
 
       - name: Setup rosdep
         run: |
@@ -50,5 +60,15 @@ jobs:
         shell: bash
         run: |
           source /opt/ros/humble/setup.bash
-          colcon build --packages-select box_detection
+          cd src/control_ws
+          colcon build --packages-select control_versions ur5_moveit_planner
+
+      - name: Test
+        shell: bash
+        run: |
+          source /opt/ros/humble/setup.bash
+          cd src/control_ws
+          source install/setup.bash
+          colcon test --packages-select control_versions ur5_moveit_planner
+          colcon test-result --verbose
         
