--- a/src/ur5_moveit_planner/CMakeLists.txt
+++ b/src/ur5_moveit_planner/CMakeLists.txt
@@ -1,15 +1,14 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.10)
 project(ur5_moveit_planner)
 
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
-endif()
+
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(trajectory_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(moveit_ros_planning_interface REQUIRED)
@@ -17,11 +16,19 @@ find_package(moveit_ros_planning_interface REQUIRED)
 
 add_executable(ur5_moveit_planner_node src/ur5_moveit_planner_node.cpp)
 ament_target_dependencies(ur5_moveit_planner_node
-  rclcpp geometry_msgs sensor_msgs tf2 tf2_geometry_msgs
+  rclcpp geometry_msgs sensor_msgs tf2 tf2_geometry_msgs trajectory_msgs
   moveit_ros_planning_interface
 )
 
+add_executable(ur5_moveit_quickstart src/ur5_moveit_quickstart.cpp)
+ament_target_dependencies(ur5_moveit_quickstart
+  rclcpp geometry_msgs sensor_msgs tf2 tf2_geometry_msgs trajectory_msgs
+  moveit_ros_planning_interface
+)
+
+
 install(TARGETS ur5_moveit_planner_node
+  ur5_moveit_quickstart
   DESTINATION lib/${PROJECT_NAME})
 
 
